--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,7 @@
 	<h1>Crime Map</h1>
 	<form action="/add" method="POST">
 		<input type="text" name="userinput">
-		<input type="submit" name="Submit">
+		<input type="submit" value="Submit">
 	</form>
 	<a href="/clear">clear</a>
 	{% for userinput in data %}
