--- a/templates/home.html
+++ b/templates/home.html
@@ -1,25 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-
-		<script type="text/javascript">
-			function initialize() {
-				var mapOptions = {
-					center: new google.maps.LatLng(-
-					33.30578381949298, 26.523442268371582),
-					zoom: 15
-				};
-				var map = new 
-				google.maps.Map(document.getElementById("map-canvas"),mapOptions);
-			}
-		</script>
-		<script type="text/javascript"
-			src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRSg9WaW0dXcIbiLKzxu9AaOFs9K7Lr7E">
-		</script>
-		
-	</head>
-	<body>
-		<body onload="initialize()">
-		<div id="map-canvas" style="width:80%; hegiht:500px;"></div>
-	</body>
+<html>
+<body>
+        <head>
+                <title>Crime Map</title>
+        </head>
+        <h1>Crime Map</h1>
+        <form action="/add" method="POST">
+                <input type="text" name="userinput">
+                <input type="submit" value="Submit">
+        </form>
+        <a href="/clear">clear</a>
+        {% for userinput in data %}
+                <p>{{userinput}}</p>
+        {% endfor %}
+</body>
 </html>
