--- a/templates/home.html
+++ b/templates/home.html
@@ -1,30 +1,25 @@
-<!--<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 	<head>
-	
 		<script type="text/javascript"
 			src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRSg9WaW0dXcIbiLKzxu9AaOFs9K7Lr7E">
 		</script>
 		
+		
 		<script type="text/javascript">
 			function initialize() {
-				var mapOptions = {
-					center: new google.maps.LatLng(-
-					33.30578381949298, 26.523442268371582),
-					zoom: 15
+				var mapOptions = {center: new google.maps.LatLng(-33.30578381949298, 26.523442268371582), zoom: 15
 				};
-				var map = new 
-				google.maps.Map(document.getElementById("map-canvas"),mapOptions);
-			}
+			var map = new google.maps.Map(document.getElementById("map-canvas"), mapOptions);
+		}
 		</script>
-
-		
 	</head>
 		<body onload="initialize()">
-			<div id="map-canvas" style="width:80%; hegiht:500px;"></div>
+			<div id="map-canvas" style="width:80%; height:500px;"></div>
 		</body>
-</html> -->
+</html>
 
+<!--
 <!DOCTYPE html>
 <html>
   <head>
@@ -56,3 +51,32 @@
     </script>
   </body>
 </html>
+
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+	
+		<script type="text/javascript"
+			src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRSg9WaW0dXcIbiLKzxu9AaOFs9K7Lr7E">
+		</script>
+		
+		<script type="text/javascript">
+			function initialize() {
+				var mapOptions = {
+					center: new google.maps.LatLng(-
+					33.30578381949298, 26.523442268371582),
+					zoom: 15
+				};
+				var map = new 
+				google.maps.Map(document.getElementById("map-canvas"),mapOptions);
+			}
+		</script>
+
+		
+	</head>
+		<body onload="initialize()">
+			<div id="map-canvas" style="width:80%; hegiht:500px;"></div>
+		</body>
+</html> 
+
+ -->
