--- a/templates/home.html
+++ b/templates/home.html
@@ -7,10 +7,23 @@
 		
 		
 		<script type="text/javascript">
+			var map;
+			console.log("A message form script");
 			function initialize() {
-				var mapOptions = {center: new google.maps.LatLng(-33.30578381949298, 26.523442268371582), zoom: 15
+				var mapOptions = {center: new google.maps.LatLng(50.389102, -4.141332), zoom: 15
 				};
-			var map = new google.maps.Map(document.getElementById("map-canvas"), mapOptions);
+			map = new google.maps.Map(document.getElementById("map-canvas"), mapOptions);
+			google.maps.event.addListener(map, 'click',
+			function(event){
+			placeMarker(event.latLng);
+			});
+		}
+		
+		function placeMarker(location) {
+		var marker = new google.maps.Marker({
+		position: location,
+		map: map
+		});
 		}
 		</script>
 	</head>
