changing marker to move instead of new one

--- a/templates/home.html
+++ b/templates/home.html
@@ -8,6 +8,7 @@
 		
 		<script type="text/javascript">
 			var map;
+			var marker;
 			console.log("A message form script");
 			function initialize() {
 				var mapOptions = {center: new google.maps.LatLng(50.389102, -4.141332), zoom: 15
@@ -20,10 +21,14 @@
 		}
 		
 		function placeMarker(location) {
-		var marker = new google.maps.Marker({
-		position: location,
-		map: map
-		});
+		if (marker){
+			marker.setPosition(location);
+		} else {
+			marker = new google.maps.Marker({
+			position: location,
+			map: map
+			});
+		}
 		}
 		</script>
 	</head>
