--- a/templates/home.html
+++ b/templates/home.html
@@ -33,6 +33,28 @@
 		</script>
 	</head>
 		<body onload="initialize()">
+			<h1>CrimeMap</h1>
+			<p>A map of recent criminal activity in the area</p>
 			<div id="map-canvas" style="width:80%; height:500px;"></div>
+			
+			<div id="newcrimeform">
+				<h2>Submit new crime</h2>
+				<form action="/submitcrime" method="POST">
+				<label for="category">Category</label>
+				<select name="category" id="category">
+					<option value="mugging">Mugging</option>
+					<option value="breakin">Breakin</option>
+				</select>
+				<label for="date">Date</label>
+				<input name="date" id="date" type="date">
+				<label for="latitude">Latitude</label>
+				<input name="latitude" id="latitiude" type="text">
+				<label for="longitude">Longitude</label>
+				<input name="longitude" id="longitude" type="text">
+				<label for="description">Description</label>
+				<textarea name="description" id="description" placeholder="A breif description"></textarea>
+				<input type="submit" value="Submit">
+				</form>
+			</div>
 		</body>
 </html>
