added functionality to display already existing DB points

--- a/templates/home.html
+++ b/templates/home.html
@@ -20,6 +20,7 @@
 			function(event){
 			placeMarker(event.latLng);
 			});
+			placeCrimes({{crimes | safe}});
 		}
 		
 		function placeMarker(location) {
@@ -36,6 +37,19 @@
 		document.getElementById('latitude').value = location.lat();
 		document.getElementById('longitude').value = location.lng();
 		}
+		
+		function placeCrimes(crimes) {
+			for (i=0; i<crimes.length; i++) {
+				console.log(crimes[i]);
+				crime = new google.maps.Marker( {
+					position: new google.maps.LatLng(crimes[i].latitude, crimes[i].longitude),
+					map: map,
+					title: crimes[i].date + "\n" + crimes[i].category + "\n" + crimes[i].description
+				} 
+				) ;
+			}
+		}
+		
 		</script>
 	</head>
 		<body onload="initialize()">
