--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<head>
 		<link type="text/css" rel="stylesheet" href="{{url_for('static', filename='css/style.css') }}"/>
 
